# ACRouter

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FLASHING.md  LICENSE  README.md  RELEASE_GUIDE.txt  ROADMAP.md  WEB_API.md  build.bat  build.sh  partitions.csv  release.bat  release.sh  sdkconfig.defaults  sdkconfig.defaults.c2mqtt  sdkconfig.defaults.esp32c2
.claude/: settings.local.json
components/acrouter_hal/: CMakeLists.txt
components/acrouter_hal/include/: DimmerHAL.h  PinDefinitions.h  PowerMeterADC.h  RouterController.h
components/acrouter_hal/src/: DimmerHAL.cpp  PowerMeterADC.cpp  RouterController.cpp
components/comm/: CMakeLists.txt
components/comm/include/: GitHubOTAChecker.h  HttpdServer.h  MQTTManager.h  NTPManager.h  OTAManager.h  WebServerManager.h  WiFiManager.h
components/comm/src/: GitHubOTAChecker.cpp  HttpdServer.cpp  MQTTManager.cpp  NTPManager.cpp  OTAManager.cpp  WebServerManager.cpp  WebServerStyles.h  WiFiConfigPage.h  WiFiManager.cpp
components/comm/web/components/: Footer.h  Layout.h
components/comm/web/pages/: DashboardPage.h  HardwareConfigPage.h  MQTTPage.h  OTAPage.h  RelaysPage.h  WiFiConfigPage.h
components/comm/web/styles/: MaterialStyles.h
components/device_registry/: CMakeLists.txt
components/device_registry/include/: device_registry.h
components/device_registry/src/: device_registry.c
components/dimmer/: CMakeLists.txt
components/dimmer/include/: dimmer_i2c.h  dimmer_manager.h  dimmer_types.h
components/dimmer/src/: dimmer_i2c.c  dimmer_manager.c
components/dimmerlink/: CMakeLists.txt
components/dimmerlink/include/: dimmerlink_device.h  dimmerlink_manager.h  dimmerlink_regs.h  dimmerlink_types.h
components/dimmerlink/src/: dimmerlink_device.c  dimmerlink_manager.c
components/esp_now_source/: CMakeLists.txt  Kconfig
components/esp_now_source/include/: esp_now_source.h  espnow_proto.h
components/esp_now_source/src/: esp_now_source.c
components/event_bus/: CMakeLists.txt
components/event_bus/include/: acrouter_events.h  acrouter_measurements.h
components/event_bus/src/: acrouter_events.c
components/i2c_bus/: CMakeLists.txt
components/i2c_bus/include/: i2c_bus.h
components/i2c_bus/src/: i2c_bus.c
components/output/: CMakeLists.txt
components/output/include/: GPIORelay.h  IOutputInterface.h  IRelayInterface.h  RelayManager.h
components/output/src/: GPIORelay.cpp  RelayManager.cpp
components/rbamp_source/: CMakeLists.txt  Kconfig  idf_component.yml
components/rbamp_source/include/: rbamp_source.h
components/rbamp_source/src/: rbamp_source.c
components/relay/: CMakeLists.txt
components/relay/include/: relay_gpio.h  relay_i2c.h  relay_manager.h  relay_types.h
components/relay/src/: relay_gpio.c  relay_i2c.c  relay_manager.c
components/sensor_hub/: CMakeLists.txt
components/sensor_hub/include/: sensor_hub.h
components/sensor_hub/src/: sensor_hub.c
components/sensors/: CMakeLists.txt
components/sensors/include/: CurrentSensorDrivers.h  SensorTypes.h  VoltageSensorDrivers.h
components/utils/: CMakeLists.txt
components/utils/include/: ConfigManager.h  DataTypes.h  HardwareConfigManager.h  SerialCommand.h
components/utils/src/: ConfigManager.cpp  HardwareConfigManager.cpp  SerialCommand.cpp
docs/: 00_OVERVIEW.md  01-1_HARDWARE_GUIDE.md  01-2_COMMISSIONING_EN.md  01_HARDWARE_GUIDE.md  01_OVERVIEW_EN.md  02_COMPILATION.md  02_COMPILATION_EN.md  03_STRUCTURE.md  04_ROUTER_MODES.md  04_ROUTER_MODES_EN.md  05_API_REFERENCE.md  06_MAIN_APPLICATION.md  07_COMMANDS.md  07_COMMANDS_EN.md  08_WEB_API_GET.md  08_WEB_API_GET_EN.md  09_WEB_API_POST.md  09_WEB_API_POST_EN.md  10_SENSOR_CALIBRATION.md  10_SENSOR_CALIBRATION_EN.md  11_MQTT_GUIDE.md  12_HOME_ASSISTANT.md  13_GLOSSARY_EN.md  ROADMAP.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  system_init.cpp  system_init.h  system_loop.cpp  system_loop.h
